# libft

./: .tags  .tags1  CMakeLists.txt  Makefile  README.md  ft_cntbspc.c  ft_cnttotspc.c  ft_cnttrim.c  ft_isalnum.c  ft_isprint.c  ft_isspc.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memdel.c  ft_memset.c  ft_numlen.c  ft_nxtwrdlen.c  ft_putendl_fd.c  ft_putlong.c  ft_putstr.c  ft_putstrto.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strtrim.c  libft.h  tags
Libft/Libft.xcodeproj/: project.pbxproj
char/: ft_isalpha.c  ft_isascii.c  ft_isdigit.c
cnvrsn/: ft_atoi.c  ft_itoabse.c
ft_printf/: pf_is.c  pf_print_s.c  pf_typechr.c  pf_width.c
gnl/: gnl.c  gnl.h
incl/: bool.h  char.h  cnvrsn.h  gnl.h  limits.h  lst.h  mem.h  net.h  net_ping.h  num.h  ping.h  primsz.h  printf.h  put.h  return_types.h  str.h  tbl.h
lst/: ft_lstdelone.c  ft_lstdup.c  ft_lsteadd.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c
mem/: ft_bzero.c  ft_memalloc.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  mem.txt
put/: ft_putchar_fd.c  ft_putclst.c  ft_putendl.c  ft_putnbr.c  ft_putnlst.c
src/char/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspc.c  ft_isupper.c
src/cnvrsn/: ft_atoi.c  ft_itoa.c  ft_itoabse.c
src/ft_printf/: ft_printf.c  pf_cast_di.c  pf_cast_oux.c  pf_ihelp.c  pf_initstructs.c  pf_is.c  pf_itoabse.c  pf_mod.c  pf_print_c.c  pf_print_i.c  pf_print_o.c  pf_print_p.c  pf_print_perc.c  pf_print_s.c  pf_print_u.c  pf_print_x.c  pf_putchar.c  pf_puterror.c  pf_putnbr.c  pf_putpad.c  pf_putpad_c.c  pf_putpad_i.c  pf_putstr.c  pf_tick.c  pf_typechr.c  pf_width.c
src/gnl/: gnl.c
src/lst/: ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstdup.c  ft_lsteadd.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstnewstak.c
src/mem/: ft_bzero.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
src/net/: ft_checksum.c  ft_domtoip.c  ft_gethstaddr.c  ft_getifaceaddr.c  ft_isaddrset.c  ft_makerawsock.c  ft_packet_header.c  ft_setsock_timeout.c  ft_sockoptraw.c
src/num/: ft_getpercent.c  ft_numlen.c  ft_timediff.c
src/put/: ft_errorexit.c  ft_hexdump.c  ft_putchar.c  ft_putchar_fd.c  ft_putclst.c  ft_putendl.c  ft_putendl_fd.c  ft_puterror.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnlst.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrrev.c  ft_puttbl.c
src/str/: ft_cntbnespc.c  ft_cntbspc.c  ft_cnttotspc.c  ft_cntwrds.c  ft_dirjoin.c  ft_isstralnum.c  ft_isstralpha.c  ft_isstrascii.c  ft_isstrdigit.c  ft_strcat.c  (+34 more)
srcs/: ft_atoi.c  ft_bzero.c  ft_cntbnespc.c  ft_cntspc.c  ft_cnttotspc.c  ft_cnttrim.c  ft_cntwrds.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspc.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lsteadd.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_nxtwrdlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putchrto.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putstrto.c  ft_strcat.c  ft_strchr.c  (+24 more)
str/: ft_cntbspc.c  ft_isstralnum.c  ft_isstralpha.c  ft_isstrascii.c  ft_isstrdigit.c  ft_isstrprint.c  ft_nxtwrdlen.c  ft_strcat.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strlen.c  ft_strmapi.c  ft_strndup.c  ft_strrchr.c  ft_strrev.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c
tbl/: ft_itbllen.c  ft_tblcnew.c  ft_tbldel.c  ft_tbldup.c  ft_tbllen.c  ft_tblnew.c  ft_tblnnew.c
(+112 files in other folders)
